--- a/Entregables/Reto1_Freecodecamp/styles.css
+++ b/Entregables/Reto1_Freecodecamp/styles.css
@@ -8,7 +8,7 @@
 .colorDiv {
     background-color: bisque;
     font-family: Verdana;
-    font-size:large
+    font-size: auto;
     text-align: center;
     
 }
@@ -17,7 +17,7 @@
     padding: 10px; 
     margin: 2;
     font-family: Verdana;
-    font-size: 10px;
+    font-size: 10;
     text-align: center;
   width: 450px
    }
@@ -25,13 +25,9 @@
 
 
 img {display: block;
-margin:0 auto;
-max-width: 450px;
-  height: auto;
-
-
-
-
+    margin:0 auto;
+    max-width: 450px;
+    height: auto;
 }
 
 #tribute-info {
@@ -39,7 +35,6 @@ max-width: 450px;
     font-size: medium;
     text-align: justify;
 }
-
 #imagen-caption {
     text-align: center;
     
@@ -49,6 +44,40 @@ max-width: 450px;
     font-family: Verdana;
     font-size: medium;
 }
+
+.contenedor-empresas {
+    
+    width: 100%;
+    align-content: center;
+    margin: 100px;
+
+}
+div.empresa {
+    width: 45%;
+    display:inline-block;
+}
+
+
+.empresa img{
+    width: 100%;
+    height: 300px;
+    margin: 10px;
+    align-content: center;
+    
+}
+
+.empresa a {
+    align-content: center;
+}
+
+h2 {
+    text-align:center
+}
+
+p {
+    margin: 10px;
+}
+
 
 
 
