Ejercicios Modulo3:IMC y Peliculas

--- a/Campo_entrenamiento/Modulo3/Tarea2Peliculas/styles/style.css
+++ b/Campo_entrenamiento/Modulo3/Tarea2Peliculas/styles/style.css
@@ -20,3 +20,16 @@
     font-size: 100px;
 }
 
+
+#carousel img {
+    object-fit: cover;
+}
+
+@supports(object-fit: cover){
+    #carousel img{
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+    }
+}
+
