--- a/Campo_entrenamiento/Modulo3/Tarea1IMC/styles.css
+++ b/Campo_entrenamiento/Modulo3/Tarea1IMC/styles.css
@@ -36,3 +36,15 @@
     background-color: brown;
     color: beige;
 }
+
+
+#medidor meter{
+    width: 200px;
+    height: 40px;
+    
+}
+
+#escala {
+    display:inline-flex;
+
+}
